# kittygram_final

./: .env.example  .gitignore  README.md  docker-compose.production.yml  docker-compose.yml  kittygram_workflow.yml  pyproject.toml  tests.yml
.github/workflows/: main.yml
backend/: Dockerfile  requirements.txt
backend/cats/: models.py
backend/kittygram_backend/: settings.py  urls.py
frontend/: Dockerfile
frontend/src/components/add-card-page/: add-card-page.jsx
frontend/src/components/app/: app.test.js
frontend/src/components/header/: header.jsx
frontend/src/components/sign-in/: sign-in.jsx
nginx/: nginx.conf
